--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "tailwind:build" : "npx @tailwindcss/cli -i ./public/css/input.css -o ./public/css/style.css --build",
     "tailwind:watch" : "npx @tailwindcss/cli -i ./public/css/input.css -o ./public/css/style.css --watch",
-    "key:generate" : " php app/config/generate-key.php"
+    "key:generate" : " php app/config/generate-key.php",
+    "start" : "npm i && composer update && npm run key:generate"
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.8",
