--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-./node_modules
-./vendor
-./.env
-./app/logs/*.log
+node_modules/
+vendor/
+.env
+app/logs/*.log
 
-./composer.lock
-./package-*
+composer.lock
+package-*
 
-./public/css/style.css
+public/css/style.css
